--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,30 @@
 build
+/build_*/
+/bin/
+/obj/
+/install/
+
+CMakeFiles/
+CMakeCache.txt
+cmake_install.cmake
+
+*.o
+*.a
+*.so
+.so.
+*.d
+*.gcno
+*.gcda
+*.gcov
+*.out
+*.exe
+*.log
+
+*.swp
+*.swo
+*~
+.DS_Store
+Thumbs.db
+
+.idea/
+.vscode/
